<resources>
    <string name="app_name">Shivam</string>

    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="customers">Customers</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_aline">Add Aline Gown</string>
    <string name="update_aline">Update Aline Gown</string>
    <string name="add_chapatti">Add Chapatti Gown</string>
    <string name="update_chapatti">Update Chapatti Gown</string>
    <string name="add_nightdress">Add Night dress</string>
    <string name="update_nightdress">Update Night dress</string>
    <string name="add_lenghi">Add Lenghi</string>
    <string name="update_lenghi">Update Lenghi</string>
    <string name="add_customer">Add Customer</string>
    <string name="update_customer">Update Customer</string>
    <string name="customer_added">Customer is added successfully</string>
    <string name="add_customer_failed">Failed to add customer, please try again</string>
    <string name="deleted_customer_failed">Failed to delete customer, please try again</string>
    <string name="customer_deleted">Customer is deleted successfully</string>
    <string name="customer_updated">Customer is updated successfully</string>
    <string name="update_customer_failed">Failed to update customer, please try again</string>
    <string name="customer_details">Customer Details</string>
    <string name="order_details">Order Details</string>
    <string name="error_required_permissions_not_available">Shivam doesn’t have mandatory permissions. To enable access, go to Settings.</string>
    <string name="no_call_facility">Calling facility is not available for this device.</string>
    <string name="order_added">Order is added successfully</string>
    <string name="add_order_failed">Failed to add order, please try again</string>
    <string name="order_deleted">Order is deleted successfully</string>
    <string name="delete_order_failed">Failed to delete order, please try again</string>
    <string name="order_updated">Order is updated successfully</string>
    <string name="update_order_failed">Failed to update order, please try again</string>
    <string name="customer">ગ્રાહક</string>
    <string name="aline_gown">એલાઇન ગાઉન</string>
    <string name="chapati_down">ચપટીવાળુ ગાઉન</string>
    <string name="night_dress">નાઈટશુટ</string>
    <string name="lenghi">લેંઘી</string>
    <string name="soemthing_wrong">Something went wrong, please try again later.</string>
    <string name="screenshot_saved">Screenshot is saved</string>
    <string name="night_shoot_top">ટોપ</string>
    <string name="night_shoot_bottom">લેંઘી</string>
    <string name="customer_not_exists">Customer is deleted</string>

    <string name="aarya_notification">Shivam Notification</string>
    <string name="sync_service_title">Shivam service is running in the background.</string>
    <string name="sync_service_description">This will help to sync data in the background.</string>

    <!-- Search screen -->
    <string name="query_hint">Search by customer</string>

    <!-- login screen -->
    <string name="login">LOGIN</string>
    <string name="create_account">Create account?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- details screen -->
    <string name="delete">Delete</string>

    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>

    <string name="left_icon" translatable="false">Left Icon</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="refresh">Refresh</string>
    <string name="selectall">Select All</string>
    <string name="accept">Accept</string>
    <string name="error_required">Required</string>
    <string name="empty">&#160;</string>
    <string name="error_network">No connectivity. Please try later.</string>
    <string name="error_invalid">Invalid %1$s</string>
    <string name="error_less_digit">%1$s digits</string>
    <string name="error_less_letters">%1$s letters</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="error">Error</string>
    <string name="no_data">No records found</string>
    <string name="view_all">View All (%s)</string>
    <string name="add_new">+ Add new</string>
    <string name="show_more_results">Show more results</string>
    <string name="no_result">No results found</string>
    <string name="and_x_more">"&amp; %s more"</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="minimum_item_validation">Minimum %d items must be selected</string>
    <string name="description">Description</string>
    <string name="max_limit_selected">Maximum %1$d items can be selected</string>
    <string name="mieChipLeftDrawable" translatable="false">MiEChipLeftDrawable</string>

    <!-- errors -->
    <string name="required">Required</string>
    <string name="enter_valid_email">Please enter valid email</string>

</resources>