<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/activity_main_bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation_menu" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/activity_main_bottom_navigation_view"
        android:background="@color/light_white" />

    <fragment
        android:id="@+id/activity_main_nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view"
        android:layout_below="@+id/toolbar"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_main_bottom_navigation_view"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/small_padding"
        fab:menu_colorNormal="@color/red"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_maxLines="1"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_singleLine="true"
        fab:menu_labels_textColor="@color/white"
        fab:menu_labels_textSize="@dimen/padding_12dp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="@color/red"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addAlineGown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            fab:fab_label="@string/add_aline"
            fab:fab_size="mini"
            fab:menu_colorNormal="@color/red"
            fab:menu_shadowColor="@color/red"
            fab:menu_showShadow="true" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addChapattiGown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            fab:fab_label="@string/add_chapatti"
            fab:fab_size="mini"
            fab:menu_colorNormal="@color/red"
            fab:menu_shadowColor="@color/red"
            fab:menu_showShadow="true" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addNightDress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            fab:fab_label="@string/add_nightdress"
            fab:fab_size="mini"
            fab:menu_colorNormal="@color/red"
            fab:menu_shadowColor="@color/red"
            fab:menu_showShadow="true" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addLenghi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            fab:fab_label="@string/add_lenghi"
            fab:fab_size="mini"
            fab:menu_colorNormal="@color/red"
            fab:menu_shadowColor="@color/red"
            fab:menu_showShadow="true" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            fab:fab_label="@string/add_customer"
            fab:fab_size="mini"
            fab:menu_colorNormal="@color/red"
            fab:menu_shadowColor="@color/red"
            fab:menu_showShadow="true" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>