<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:vymo="http://schemas.android.com/apk/res-auto"
    style="@style/Default"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize">

    <RelativeLayout
        android:id="@+id/main_container"
        style="@style/Default"
        android:background="@color/background"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include
            android:id="@+id/bottom_sheet_header"
            layout="@layout/bottom_sheet_header" />

        <com.sadiwala.shivam.util.VymoSearchBar
            android:id="@+id/etxt_input_search"
            style="@style/Default"
            android:layout_below="@+id/bottom_sheet_header"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginRight="@dimen/padding_8dp"
            android:background="@drawable/searchbar_bg"
            vymo:clear_icon="@drawable/ic_clear_button"
            vymo:hint="@string/select"
            vymo:search_bar_background_color="@android:color/transparent"
            vymo:search_bar_hint_text_color="@color/rect_bg"
            vymo:search_bar_text_color="@color/dark_grey_323232"
            vymo:search_icon="@drawable/search_24px" />

        <RelativeLayout
            android:id="@+id/selected_section"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_size_40"
            android:layout_below="@id/etxt_input_search"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@color/background"
            android:visibility="gone">

            <com.sadiwala.shivam.util.CustomTextView
                android:id="@+id/tv_selected"
                style="@style/WrapContent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/medium_padding"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

        </RelativeLayout>

        <com.sadiwala.shivam.util.VymoNestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selected_section"
            android:layout_marginLeft="@dimen/medium_padding"
            android:paddingTop="@dimen/tiny_padding"
            android:paddingRight="@dimen/tiny_padding"
            android:paddingBottom="@dimen/tiny_padding">


        </com.sadiwala.shivam.util.VymoNestedScrollView>

        <RelativeLayout
            android:id="@+id/other_section"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_size_40"
            android:layout_below="@id/nested_scroll"
            android:background="@color/background"
            android:visibility="gone">

            <com.sadiwala.shivam.util.CustomTextView
                android:id="@+id/tv_others"
                style="@style/WrapContent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/medium_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            style="@style/Default"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <ImageView
                style="@style/Default"
                android:layout_height="@dimen/tiny_padding"
                android:background="@drawable/buttons_upper_drop_shadow" />

            <LinearLayout
                style="@style/Default"
                android:background="@color/white"
                android:padding="@dimen/padding_12dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    style="@style/VariableWidth"
                    android:layout_height="@dimen/nav_bottom_height"
                    android:background="@color/white"
                    android:text="@string/cancel"
                    android:textColor="@color/vymo_text_secondary_dark"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_finished"
                    style="@style/VariableWidth"
                    android:layout_height="@dimen/nav_bottom_height"
                    android:background="@drawable/positive_button_background"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            style="@style/Default"
            android:layout_above="@id/buttons_container"
            android:layout_below="@+id/other_section">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/list_layout"
                style="@style/Default">

                <com.sadiwala.shivam.util.BottomSheetListView
                    android:id="@+id/lv_search_input_fields"
                    style="@style/BasicList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_white" />

                <com.sadiwala.shivam.util.TouchEventInterceptorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/sectionedRecyclerView"
                        style="@style/Default"
                        android:layout_marginTop="@dimen/small_padding"
                        android:visibility="gone"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                </com.sadiwala.shivam.util.TouchEventInterceptorLayout>

            </RelativeLayout>

            <com.sadiwala.shivam.util.CustomTextView
                android:id="@+id/txt_search_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@id/list_layout"
                android:padding="@dimen/padding_8dp"
                android:text="@string/show_more_results"
                android:textColor="@color/vymo_red"
                android:textSize="@dimen/vymo_font_d"
                android:visibility="gone"
                app:fontName="@string/font_bold" />

            <com.sadiwala.shivam.util.CustomTextView
                android:id="@+id/error"
                style="@style/Error"
                android:layout_centerInParent="true"
                android:padding="@dimen/padding_30dp"
                android:text="@string/no_data"
                android:textColor="@color/vymo_text_color_3" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>